Avalara Fullqa/src/PFLSwagIQ/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create Task</fullName>
                </value>
                <value>
                    <fullName>Auto Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Field__c</fullName>
        <label>Assigned To Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Type__c</fullName>
        <label>Assigned To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Creator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_FollowUp_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create follow-up task upon delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the rule</description>
        <inlineHelpText>Input rule description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Due Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluate_When__c</fullName>
        <label>Evaluate When</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Created, and every time it&apos;s edited</fullName>
                </value>
                <value>
                    <fullName>Created, and any time it&apos;s edited to subsequently meet criteria</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Id__c</fullName>
        <description>Id of the gift</description>
        <inlineHelpText>Specify Id of the gift</inlineHelpText>
        <label>Gift Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Name__c</fullName>
        <label>Gift Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_City__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_City__c</defaultValue>
        <label>Gift Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Company__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Company__c</defaultValue>
        <label>Gift Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Country__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Country__c</defaultValue>
        <label>Gift Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Email__c</fullName>
        <label>Gift Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_First_Name__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_First_Name__c</defaultValue>
        <label>Gift Sender First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Last_Name__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Last_Name__c</defaultValue>
        <label>Gift Sender Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Phone__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Phone__c</defaultValue>
        <label>Gift Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Postal_Code__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Postal_Code__c</defaultValue>
        <label>Gift Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_State__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_State__c</defaultValue>
        <label>Gift Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Street_Address_Two__c</fullName>
        <label>Gift Sender Street Address Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Street_Address__c</fullName>
        <defaultValue>$Setup.SwagIQ_Constants__c.Gift_Sender_Street_Address__c</defaultValue>
        <label>Gift Sender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Sender User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auto_Send_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ignore_If_Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore If Auto-Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSONCriteria__c</fullName>
        <label>JSON Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if notify assignee</description>
        <label>Notify Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_From_Field__c</fullName>
        <label>Offset From Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>For timed rules</description>
        <inlineHelpText>For timed rules</inlineHelpText>
        <label>Offset Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset_Type__c</fullName>
        <label>Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Before</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <formula>Due_Date_Offset__c *IF(ISPICKVAL(Offset_Type__c, &apos;After&apos;), -1, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <label>Recipient Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Account Billing Address</fullName>
                </value>
                <value>
                    <fullName>Account Shipping Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restrict_Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Create-Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrict_Manual_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Manual Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rules_Description__c</fullName>
        <description>Description of the rule</description>
        <inlineHelpText>Specify description of the rule</inlineHelpText>
        <label>Rules Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Type__c</fullName>
        <label>Send Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Send</fullName>
                </value>
                <value>
                    <fullName>Create Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Task subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Description of the task</description>
        <inlineHelpText>Input task description</inlineHelpText>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <description>Name of the task</description>
        <inlineHelpText>Specify name of the task</inlineHelpText>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timebased_criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timebased criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Based</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>api_key__c</fullName>
        <label>api key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>